Translated to italian and adapted, removed deprecated rdiscount markdown driver

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 safe: true
 lsi: false
-highlighter: pygments
-markdown: rdiscount
-rdiscount:
-  extensions: [smart]
+highlighter: rouge
+markdown: kramdown
